# llm-text-sanitizer

./: .gitignore  .gitleaks.toml  .mcp.json.example  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .punctiliorc.json  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  THREAT-MODEL.md  eslint.config.mjs  node_modules  package.json  pyproject.toml  setup.sh  stryker.conf.json
.claude/: README.md  settings.json
.claude/hooks/: pre-push-check.sh  safe-launch.sh  session-setup.sh
.claude/skills/audit-and-parallelize/: SKILL.md
.claude/skills/pr-creation/: SKILL.md  critique-prompt.md  pr-templates.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  mutation-shards.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-base-env/: action.yaml
.github/prompts/: security-vulnerability-scan.md
.github/scripts/: aggregate-mutation.mjs  check-changelog-version.sh  check-existing-security-pr.sh  check-symlinks.sh  check-token-scope.sh  fetch-security-report.sh  gitleaks-scan.sh  list-dependabot-prs.sh  mutation-changed.sh  pack-smoke.sh  phone-home-extract.js  phone-home-submit.js  run-hook-lifecycle.sh  run-mutation-shard.sh  script-configured.sh  show-sync-diff.sh  template-sync.sh  validate-config.sh
.github/workflows/: auto-version.yaml  changelog-version.yaml  claude.yaml  dependabot-auto-merge.yaml  format-autofix.yaml  format-check.yaml  gitleaks.yaml  hook-lifecycle.yaml  lint.yaml  mutation.yaml  node-tests.yaml  pack-smoke.yaml  phone-home.yaml  pre-commit.yaml  publish-python.yaml  security-vulnerability-scan.yaml  template-sync.yaml  validate-config.yaml  zizmor.yaml
.hooks/: pre-commit
changelog.d/: found-codes.added.md  found-codes.changed.md
python/: README.md  pyproject.toml
python/agent_input_sanitizer/: __init__.py  invisible.py
python/agent_input_sanitizer/data/: invisible-charset.json
python/agent_input_sanitizer/secrets/: __init__.py  cli.py  config.py  daemon.py  detectors.py  engine.py  invisible.py
python/agent_input_sanitizer/secrets/data/: secret-detectors.json
scripts/: bundle-python-cli.mjs  gen-invisible-charset.mjs  gen-joining-type.mjs  promote-changelog.mjs  promote-changelog.test.mjs  set-pyproject-version.sh  version-bump.sh
scripts/data/: DerivedJoiningType.json  IndicSyllabicCategory.Virama.json  README.md
src/: confusables.mjs  gates.mjs  html.mjs  index.mjs  instructions.mjs  invisible.mjs  joining-type.mjs  layer1.mjs  output.mjs  prompt.mjs  rehydrate.mjs  view-map.mjs
test/: cli.test.mjs  confusables-property.test.mjs  confusables-semantic-fuzz.test.mjs  confusables.test.mjs  exfil-property.test.mjs  fuzz-coverage.test.mjs  generate-golden.mjs  golden-corpus.test.mjs  html-corpus.test.mjs  html-exfil-semantic-fuzz.test.mjs  html-property.test.mjs  html-semantic-fuzz.test.mjs  html.test.mjs  instructions-property.test.mjs  instructions-semantic-fuzz.test.mjs  instructions.test.mjs  invisible-charset.test.mjs  invisible-property.test.mjs  invisible-semantic-fuzz.test.mjs  invisible.test.mjs  joining-type.test.mjs  lazy-load.test.mjs  mutation-shards.test.mjs  output-property.test.mjs  output-semantic-fuzz.test.mjs  output.fuzz.test.mjs  output.test.mjs  prompt-property.test.mjs  prompt-semantic-fuzz.test.mjs  prompt.test.mjs  rehydrate-property.test.mjs  rehydrate-semantic-fuzz.test.mjs  rehydrate.test.mjs  sanitize.fuzz.test.mjs  sanitize.test.mjs  splice-property.test.mjs  threat-codepoints.mjs  types-consumer.test.mjs  view-map-property.test.mjs  view-map.test.mjs
tests/: _helpers.py  conftest.py  golden-corpus.json  golden.json  test_check_token_scope.py  test_claude_hooks.py  test_lint_skills.py  test_phone_home_extract.py  test_python_client.py  test_python_version.py  test_required_env.py  test_script_configured.py  test_template_sync.py  test_validate_config.py
tests/secrets/: conftest.py  redactor_helpers.py  test_secrets_cli.py  test_secrets_config.py  test_secrets_crossline.py  test_secrets_daemon.py  test_secrets_daemon_lifecycle.py  test_secrets_detectors.py  test_secrets_engine.py  test_secrets_invisible.py  test_secrets_isolation.py  test_secrets_property.py
type-fixtures/consumer/: consumer.mts
