# Installable Python distribution for the agent-input-sanitizer client.
#
# This packages ONLY the thin Python bridge (`agent_input_sanitizer`). The
# sanitization logic is the JavaScript in `src/` and is deliberately NOT bundled
# into the wheel: a vendored copy is the exact drift this design avoids. An
# installed package therefore needs Node.js (>=20) on PATH and the path to a
# JavaScript checkout's CLI, supplied via the `AGENT_SANITIZER_CLI` environment
# variable (see the package docstring). Run `python -m build` from this `python/`
# directory to produce the sdist/wheel.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-input-sanitizer"
# Versions the PYTHON CLIENT surface (this wrapper's API), NOT the npm release
# line. The two share a name but are published from different ecosystems and bump
# independently: the npm version is owned by the git-tag release workflow (the
# committed package.json "version" is intentionally frozen), while this is bumped
# by hand when the bridge's Python-visible API changes. So `pip install
# agent-input-sanitizer` and `npm i agent-input-sanitizer` will report different
# numbers — that is expected, not drift. Keep this a valid PEP 440 release; the
# guard in tests/test_python_version.py fails the build on a malformed edit.
version = "1.2.6"
description = "Python client for agent-input-sanitizer: a thin bridge to the Node.js CLI for byte-identical sanitization verdicts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sanitizer", "prompt-injection", "unicode", "ansi", "security"]

[project.urls]
Homepage = "https://github.com/alexander-turner/agent-input-sanitizer"
Repository = "https://github.com/alexander-turner/agent-input-sanitizer"
Issues = "https://github.com/alexander-turner/agent-input-sanitizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_input_sanitizer"]

[tool.hatch.build.targets.sdist]
include = ["agent_input_sanitizer", "README.md"]
